# front/src/gen/model/models.ts
@@ -1,1 +1,2 @@
 export * from './sampleForm';
+export * from './validationError';
